<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bimbel Linear</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_holder_paragraph">Lorem ipsum dolor sit amet consectetur. Erat justo lobortis gravida phasellus. Pharetra senectus tortor morbi massa neque magna nunc nibh quis.</string>
    <string name="place_holder_person_name">John Doe</string>
    <string name="cek_inbox">Cek inbox atau spam dari email kamu. Kami baru saja mengirimkan 6 digit kode verifikasi ke email</string>
    <string name="onboarding_title1">Sistem Belajar</string>
    <string name="onboarding_title2">Persiapan Ujian</string>
    <string name="onboarding_title3">Kelulusan</string>
    <string name="description">Lorem ipsum dolor sit amet consectetur. Dictum sollicitudin sollicitudin amet ac. Vestibulum quis aliquam fringilla dolor adipiscing. Quisque mi elementum felis senectus in justo libero netus etiam. Pellentesque eu nulla adipiscing massa nunc.</string>
    <string name="study_group">Kelompok Kelas</string>
    <string name="study_group_type">Tipe Kelas</string>
    <string name="study_group_member_count">Jumlah Anggota</string>
    <string name="study_group_members">Anggota Kelompok</string>
    <string name="join_group">Gabung Grup Whatsapp</string>
    <string name="schedule_subtitle">Jadwal Bimbel</string>
    <string name="empty_schedule">Tidak ada jadwal</string>
    <string name="save">Simpan</string>
    <string name="e_mail">E mail</string>
    <string name="password">Kata Sandi</string>
    <string name="sign_in">Masuk</string>
    <string name="logo">logo</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="email_verify">Verifikasi Email</string>
    <string name="verify">Verifikasi</string>
    <string name="resend_otp">Kirim ulang kode dalam</string>
    <string name="on_boarding_1_desc">Kami menyediakan program pembelajaran yang komprehensif untuk meningkatkan pengetahuan dan keterampilan Anda.</string>
    <string name="on_boarding_2_desc">Dengan fokus pada persiapan ujian, kami siap membantu Anda meraih hasil terbaik dalam setiap ujian yang akan dihadapi.</string>
    <string name="on_boarding_3_desc">Melalui sesi konsultasi, tim tutor kami siap menjawab pertanyaan Anda dan memberikan bimbingan pribadi untuk mengatasi kesulitan belajar.</string>
    <string name="app_desc">Aplikasi Bimbel Linear ini akan digunakan sebagai penunjang belajar siswa. Tujuan utama dari aplikasi ini adalah untuk menyediakan solusi yang efisien dalam menyediakan layanan belajar berupa module online dan juga proses upload bukti pembayaran. Aplikasi ini akan memungkinkan siswa bimbel untuk melihat jadwal bimbel, daftar tagihan, informasi kelompok, dan akses module pembelajaran.</string>
    <string name="take_from_gallery">Ambil Dari Galeri</string>
    <string name="take_from_camera">Ambil Dari Kamera</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="group_name">Kelompok Bimbel</string>
    <string name="room">Ruangan</string>
    <string name="teacher">Tentor</string>
    <string name="study_time">Waktu Bimbel</string>
    <string name="placeholder">Placeholder</string>
    <string name="bill_preview">bill_preview</string>
    <string name="due_date">Tanggal Batas Pembayaran</string>
    <string name="payment_date">Tanggal Pembayaran</string>
    <string name="accept_date">Tanggal Pembayaran Diterima</string>
    <string name="bank">Bank Tujuan</string>
    <string name="account_number">Nomor Rekening</string>
    <string name="upload_bills">Upload Bukti Transfer</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="new_repassword">Ulangi Kata Sandi Baru</string>
    <string name="offline_desc">Anda sekarang berada di mode offline. Beberapa fitur mungkin tidak dapat diakses</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="reminder_change_password_title">Harap Ubah Password Kamu</string>
    <string name="reminder_change_password_desc">Hi pengguna, untuk keamanan akun kamu, harap ubah password kamu sekarang.</string>
    <string name="developers">Pengembang Aplikasi</string>
</resources>