<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/viewBackgroundColor"
    android:orientation="vertical"
    tools:context=".presentation.view.otp.OtpFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_regular"
                android:text="@string/cek_inbox"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_user_email"
                style="@style/LabelLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/mulish_regular"
                android:textAlignment="center"
                android:textColor="@color/primary_40"
                tools:text="janedoe@mail.com" />


            <com.chaos.view.PinView
                android:id="@+id/pv_otp"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:cursorVisible="true"
                android:fontFamily="@font/mulish_semi_bold"
                android:inputType="number"
                android:itemBackground="?attr/cardColor"
                android:textColor="@color/primary_40"
                android:textSize="18sp"
                app:cursorColor="?attr/viewBackgroundColor"
                app:itemCount="6"
                app:itemHeight="60dp"
                app:itemRadius="8dp"
                app:itemSpacing="8dp"
                app:itemWidth="40dp"
                app:lineColor="?attr/boxBorderTextFieldColor"
                app:lineWidth="1dp"
                app:viewType="rectangle" />

            <Button
                android:id="@+id/btn_verify"
                style="@style/FilledButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/verify" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_text_resend"
                    style="@style/BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/btn_resend"
                    style="@style/BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/tv_text_resend"
                    android:textAlignment="center"
                    android:textColor="@color/primary_40"
                    tools:text="01:59" />
            </RelativeLayout>
        </LinearLayout>

        <include
            android:id="@+id/otp_loading"
            layout="@layout/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
